--- a/pom.xml
+++ b/pom.xml
@@ -29,9 +29,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.n3r.quartz</groupId>
+            <groupId>com.github.bingoohuang</groupId>
             <artifactId>quartz-glass</artifactId>
-            <version>0.1.0</version>
+            <version>0.0.1</version>
         </dependency>
         <dependency>
             <groupId>ch.qos.logback</groupId>
