--- a/pom.xml
+++ b/pom.xml
@@ -30,8 +30,13 @@
     <dependencies>
         <dependency>
             <groupId>com.github.bingoohuang</groupId>
+            <artifactId>diamond-client</artifactId>
+            <version>0.0.13</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.bingoohuang</groupId>
             <artifactId>quartz-glass</artifactId>
-            <version>0.0.3-SNAPSHOT</version>
+            <version>0.0.4-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>ch.qos.logback</groupId>
